<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_google_map" />

    <Button
        android:id="@+id/button_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_without_map" />
    
    <Button
        android:id="@+id/button_streetview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_streetview" />

    
</LinearLayout>
