<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

<TextView
    android:id="@+id/lblLatitude"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_latitude"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="@dimen/size_24" />

<TextView
    android:id="@+id/tvLatitude"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_pending"
    android:textColor="@color/Blue"
    android:gravity="center"
    android:textSize="@dimen/size_24" />

<TextView
    android:id="@+id/lblLongitude"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_longitude"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="@dimen/size_24" />

<TextView
    android:id="@+id/tvLongitude"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text_pending"
    android:textColor="@color/Blue"
    android:gravity="center"
    android:textSize="@dimen/size_24" />

</LinearLayout>